<?xml version="1.0"?>
<package format="2">
  <name>wrench_estimator_rtc</name>
  <version>0.0.0</version>
  <description>The wrench_estimator_rtc package </description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild</depend>

</package>
